1999-02-16  Yo Ric Dude  <ericmit@ix.netcom.com>

	* players.c, proto.c, samples.c: gracefully handle error
 	conditions from ESD_READ_*, i.e. check return values.

Mon Feb 15 18:19:31 EST 1999 Mandrake <mandrake@mandrake.net>
	* esdlib.c: boy am I getting tired of reading the
	"cannot connect to esound server" error message whenever I don't
	have esd running from that file.  there needs to be a better
	way to dump out this error.  maybe some sort of rotatable message
	file?  who knows?  but not like that.

1999-02-14  Yo Ric Dude  <ericmit@ix.netcom.com>

	* clients.c, esd.c: less brutal audio flushing algorithm.

1999-02-13  Yo Ric Dude  <ericmit@ix.netcom.com>
	
	* esdfile.c, esdlib.c: added and commented out diagnostic code. 
	* esd-server.h, esd.c, players.c, proto.c, samples.c, players.c:
 	add flag to force sample deletion, and force sample deletion only
 	when we shut down the server
	* samples.c, players.c: check for addition of NULL
 	samples/players.
	* players.c: helps if you put the recorder stream's, writeable
	fd_set mask in the proper place within the select call - thx. Chutt

1999-02-10  Yo Ric Dude  <ericmit@ix.netcom.com>

	* clients.c, esd.c, esdlib.c: only check for more data if the
	stream isn't a monitor stream, as there's nothing to read anyway.
	correct condition on esd_autostandby_secs for pausing. use the
	host representation of the port number instead of network order.

Fri Feb  5 14:28:17 PST 1999 Manish Singh <yosh@gimp.org>

	* esd-config.in: erk. NEVER include @CFLAGS@ or @LDFLAGS@ in these
	scripts. They should not be propagated to client packages

1999-02-03  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd.c: yet another CPU usage fix, courtesy of Chutt

1999-02-01  Elliot Lee  <sopwith@redhat.com>

	* Revert session management changes until further discussion.

Mon Feb  1 01:24:43 PST 1999 Manish Singh <yosh@gimp.org>

	* esddsp.c: stupid interim hack for SNDCTL_DSP_GETOSPACE so x11amp 0.9a
	works properly
